kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/003_associations_02.kmt
/* $Id: 003_associations_02.kmt,v 1.1 2005-11-23 09:35:27 dvojtise Exp $ */

// Test of a invalid associations

package root_package;


/* double composition*/
class A {
    attribute b : B#a
}
class B {
	attribute a : A#b
}
